# drones_gazebo

./: .gitignore  CMakeLists.txt  README.md  calcoli.py  generate.py  generate_all.py  logdrone_10_testX_EAPF.txt  logdrone_11_testX_EAPF.txt  logdrone_12_testX_EAPF.txt  logdrone_13_testX_EAPF.txt  logdrone_14_testX_EAPF.txt  logdrone_15_testX_EAPF.txt  logdrone_16_testX_EAPF.txt  logdrone_17_testX_EAPF.txt  logdrone_18_testX_EAPF.txt  logdrone_19_testX_EAPF.txt  logdrone_1_testX_EAPF.txt  logdrone_20_testX_EAPF.txt  logdrone_21_testX_EAPF.txt  logdrone_22_testX_EAPF.txt  logdrone_23_testX_EAPF.txt  logdrone_24_testX_EAPF.txt  logdrone_25_testX_EAPF.txt  logdrone_26_testX_EAPF.txt  logdrone_27_testX_EAPF.txt  logdrone_28_testX_EAPF.txt  logdrone_29_testX_EAPF.txt  logdrone_2_testX_EAPF.txt  logdrone_30_testX_EAPF.txt  logdrone_31_testX_EAPF.txt  logdrone_32_testX_EAPF.txt  logdrone_33_testX_EAPF.txt  logdrone_34_testX_EAPF.txt  logdrone_35_testX_EAPF.txt  logdrone_36_testX_EAPF.txt  logdrone_37_testX_EAPF.txt  logdrone_38_testX_EAPF.txt  logdrone_39_testX_EAPF.txt  logdrone_3_testX_EAPF.txt  logdrone_40_testX_EAPF.txt  (+9 more)
generator/: generate.py  try.py
models/drone/: model.config  model.sdf
models/drone/meshes/: drone_base.dae  elica.dae
models/dronetemplate/: model.config  model.sdf
models_generator/: generate.py
src/: APFB.cpp  APFE.cpp  Agent.cpp  BAPF.cpp  CollisionAvoidance.cpp  EAPF.cpp  KdTree.h  Vector3.h  collision2.hh  droneclient.cpp  droneserver.cpp  settings.h
src/collision_avoidance/: Agent.h  BAPF.cpp  CA.cpp  CollisionAvoidance.cpp  Definitions.h  EAPF.cpp  KdTree.cpp  Neighbour.h  boid.cpp  collision2.cpp  droneserver.cpp  headers.h  message.h  settings.h
worlds/: drones.world  drones_10.world  drones_12.world  drones_20.world  drones_5.world  drones_50.world  drones_8.world  world_template.world
